--- a/backmatter.tex
+++ b/backmatter.tex
@@ -44,6 +44,7 @@
 \acro{RPCs}[RPCs]{Resistive plate chambers}
 \acro{DAQ}[DAQ]{Data Acquisition}
 \acro{WLCG}[WLCG]{Worldwide LHC Computing Grid}
+\acro{RF}[RF]{radio frequency}
 \end{acronym}
 
 
