--- a/Detector/Detector.tex
+++ b/Detector/Detector.tex
@@ -6,7 +6,7 @@
 
 The \acf{LHC} \cite{lhc-machine}  is a 26.7 km long synchrotron hadron accelerator and collider below the surface of the 
 Franco-Swiss border near Geneva. It
-is installed in the tunnel that previously housed the Large Electron Positron accelerator
+is installed in the tunnel that previously hosted the Large Electron Positron accelerator
 that was operated by \acf{CERN} between 1989 and 2000.
 
 The \ac{LHC} was designed to collide beams of protons with each other at centre-of-mass
@@ -25,15 +25,15 @@ of the \ac{CERN} accelerator complex.
 Protons originate from hydrogen gas, where electrons are stripped off the 
 hydrogen atoms using an electric field. The protons then pass through an injector
 chain which increases the energy of the protons in several steps. After the protons
-are created from the hydrogen gas, they are accelerated to a centre of mass energy of
+are created from the hydrogen gas, they are accelerated to an energy of
 50 MeV in the Linac2 linear accelerator. They are then passed on to the
-\acf{PSB} which accelerates the protons until they reach a centre of mass energy of 1.4 GeV.
+\acf{PSB} which accelerates the protons until they reach an energy of 1.4 GeV.
 The next accelerator in the chain, the \acf{PS}, further accelerates the protons to 25 GeV,
 with the \acf{SPS} bringing the energy up to 450 GeV. When this energy has been 
 reached the protons are injected into the \ac{LHC} in two counter-rotating
 beams. In the \ac{LHC} ring the beams are further accelerated to the required centre of mass energy
 by eight \ac{RF} cavities. At design operation the beams consist of 2808 proton bunches each made up 
-of $\mathcal{O}(10^11)$ protons, spaced 25ns apart. The beams are kept in circulation
+of $\mathcal{O}(10^{11})$ protons, spaced 25ns apart. The beams are kept in circulation
 using 1232 niobium-titanium superconducting dipole magnets, cooled to operate at 
 a temperature of 1.9K and generating magnetic fields upwards of 8 T.
 The beams collide at four points
@@ -44,7 +44,7 @@ CMS%\cite{cms-jinst} guess we've cited this already
 The processes the \ac{LHC} was built to study have a small cross-section
 compared with the total proton-proton inelastic cross-section, as seen from figure
 \ref{fig:stirling_xs}. For example, the production cross-section of the
-standard model Higgs boson is 9-10 orders of magniuted smaller than the total p--p cross section.
+standard model Higgs boson is 9-10 orders of magnitude smaller than the total p--p cross section.
 
 \begin{figure}[h!]
 \includegraphics[width=0.5\textwidth]{./Detector/Plots/crosssections2013.jpg}
@@ -57,7 +57,7 @@ are often many orders of magnitude smaller than the total p--p cross section.}
 
 In order to be able to study these relatively rare processes, 
 the LHC operates at high instantaneous luminosity, defined as
-\ref{eqn:CMSLHC_luminosity}. 
+
 \begin{equation}\label{eqn:CMSLHC_luminosity}
 \mathcal{L} = \frac{N_b^2n_bf_{\text{rev}}\gamma}{4\pi\epsilon_n\beta^{*}}F.
 \end{equation}
@@ -68,23 +68,23 @@ Lorentz factor, $\epsilon_n$ the normalised beam
 emittance, $\beta^{*}$ the $\beta$-function at the interaction point and F a reduction
 factor due to the crossing angle. 
 
-After an initial testing phase, the \ac{LHC} began its first physics run in May 2010 with 
-a centre of mass energy of 7 TeV. The CMS experiment recorded an integrated luminosity of 45 pb$^{-1}$
-during 2010. In 2011 the \ac{LHC} continued operating at a centre-of-mass energy of 7 TeV, delivering an integrated 
-luminosity of 6.1 fb$^{-1}$ to the CMS experiment. The centre of mass energy was increased to 8 TeV
-for the 2012 data-taking period, during which an integrated luminosity of 23.3 fb$^{-1}$ was delivered.
+The \ac{LHC} began its first physics run in May 2010, colliding protons at
+a centre-of-mass energy of 7 TeV. The \ac{CMS} experiment recorded an integrated luminosity of 45 pb$^{-1}$
+during the rest of that year. In 2011 the \ac{LHC} continued operating at a centre-of-mass energy of 7 TeV, delivering
+6.1 fb$^{-1}$ to the \ac{CMS} experiment. The centre-of-mass energy was increased to 8 TeV
+for the 2012 data-taking period, during which the delivered integrated luminosity was 23.3 fb$^{-1}$.
 This completed Run 1 of the \ac{LHC}, after which the 2-year \ac{LS1} was used to 
-upgrade the LHC and the detectors for collisions at a centre of mass energy of 13 TeV.
+upgrade the \ac{LHC} and the detectors for collisions at a centre-of-mass energy of 13-14 TeV.
 
 In April 2015 the \ac{LHC} restarted with collisions at a centre-of-mass energy of 13 TeV, and during 
-this year 4.2 fb$^{-1}$ was delivered. Collisions at a centre-of-mass energy of 13 TeV continued
-in 2016, when a total of 41.1 fb$^{-1}$ was delivered. 
+this year 4.2 fb$^{-1}$ was delivered. The \ac{LHC} operated at a centre-of-mass energy of 13 TeV 
+during 2016 too, when a total of 41.1 fb$^{-1}$ was delivered to \ac{CMS}.
 The integrated luminosity as a function of time is shown in figure \ref{fig:CMSLHC_intlumi},
 separated by running year.
 
 \begin{figure}[h!]
 \includegraphics[width=0.85\textwidth]{./Detector/Plots/int_lumi_cumulative_pp_2.pdf}
-\caption{Cumulative integrated luminosity for p--p collisions at the LHC, separated
+\caption{Cumulative integrated luminosity delivered to \ac{CMS} for p--p collisions at the \ac{LHC}, separated
 by running year \cite{cms-lumi-public}.}
 \label{fig:CMSLHC_intlumi}
 \end{figure}
@@ -93,21 +93,23 @@ The data-taking efficiency of CMS is not 100\%, for example the detector might b
 switched off for part of the time collisions are ongoing. In 2012, the data-taking 
 efficiency was 93.5\%, in 2015 it was 90.3\% and in 2016 it was 92.4 \%
 
-From all of the data that is recorded, a subset is used for analyses. Data is 
+From all of the data that is recorded, only a subset is used for analysis. Data is 
 certified as good for use in analyses if it is known that all relevant subdetectors
-were functioning correctly. The certification efficiency in 2012 was 90.4\%,
-leading to an integrated luminosity of 19.7 fb$^{-1}$ for which all subdetectors
-were working well, in 2015 it was 60.4 \%, leading to 2.3 fb$^{-1}$ of analysable data
-for which the full detector was operational. An additional 0.6 fb$^{-1}$ was taken
-with the magnet switched off. The certification efficiency for the full 2016 p--p running period was 95.4\%.
+were functioning correctly. In 2012 the certification efficiency was 90.4\%
+meaning all subdetectors were working well for a dataset corresponding to 19.7 fb$^{-1}$.
+The certification efficiency was 60.4 \% in 2015, leading to 2.3 fb${-1}$ of 
+analysable data for which the full detector was operational. An additional 0.6 fb$^{-1}$
+was taken with the \ac{CMS} magnet switched off. For the full 2016 p--p running period
+the certification efficiency was 95.4\%, resulting in 36.26 fb$^{-1}$ of data marked good
+for use in analyses.
 
-The \ac{LHC} was designed for a nominal
-peak luminosity of $10^{32}$cm$^{-2}$s$^{-1}$ for proton-proton collisions. In 2012 peak
+The \ac{LHC} was designed for proton-proton collisions with a nominal
+peak luminosity of $10^{32}$cm$^{-2}$s$^{-1}$. In 2012 peak
 luminosities of $7.7*10^{33}$cm$^{-2}$s$^{-1}$ were reached, with the peak luminosity in
 2015 being $5.1*10^{33}$cm$^{-2}$s$^{-1}$. Since July 2016
 the \ac{LHC} has been operating at instantaneous luminosities upwards of the 
 design luminosity, with peak luminosities of $1.5*10^{32}$cm$^{-2}$s$^{-1}$ reached
-in October 2016.
+in October 2016 \cite{cms-lumi-public}.
 
 Due to the high operating luminosity, multiple proton-proton collisions per 
 bunch crossing are likely to occur. The average number of interactions
@@ -133,8 +135,16 @@ for physics at the TeV scale and to be able to
 function in the challenging high-luminosity environment.
 The detector is 21.6 m long, 14.6 m in diameter, and weighs
 12500 tonnes \cite{cms-jinst}. It consists of several subdetectors, as illustrated
-in figure \ref{fig:cms_detector}. Surrounding the interaction
-point is the silicon tracker, a cylinder 5.8 m in lenght and 2.6 m in 
+in figure \ref{fig:cms_detector}.
+
+\begin{figure}[h!]
+\includegraphics[width=0.8\textwidth]{./Detector/Plots/cms.png}
+\caption{A blow-up view of the \ac{CMS} detector \cite{cms-jinst}, indicating the
+different sub-parts of the detector.}
+\label{fig:cms_detector}
+\end{figure}
+
+Surrounding the interaction point is the silicon tracker, a cylinder 5.8 m in length and 2.6 m in 
 diameter. Surrounding the silicon tracker
 the lead-tungstate \ac{ECAL} is found, which in turn is enclosed
 by a brass scintilator \ac{HCAL}. 
@@ -150,7 +160,7 @@ system with the origin centred at the nominal collision point
 inside the experiment. The y-axis points vertically upward, the x-axis
 points radially inward toward the centre of the \ac{LHC} ring. The z-axis
 points along the beam direction. As such the transverse momentum and energy, 
-\pT and \ET are measured from the x- and y- components of the momentum and energy.
+\pT~and~\ET are measured from the x- and y- components of the momentum and energy.
 The azimuthal angle $\phi$ is measured in the x-y plane with respect to the x-axis, 
 the polar angle $\theta$ measured with respect to the z-axis. A coordinate
 more frequently used than the polar angle is the pseudorapidity $\eta = -\ln{[\tan{\frac{\theta}{2}}]}$.
@@ -159,12 +169,6 @@ Distances in the $\eta-\phi$ plane are given as $\Delta R = \sqrt{(\Delta\eta)^2
 The subsystems of the \ac{CMS} detector will be described in more detail in the 
 next sections.
 
-\begin{figure}[h!]
-\includegraphics[width=0.8\textwidth]{./Detector/Plots/cms.png}
-\caption{A blow-up view of the \ac{CMS} detector \cite{cms-jinst}, indicating the
-different sub-parts of the detector.}
-\label{fig:cms_detector}
-\end{figure}
 
 \subsection{Tracker}
 \label{sec:CMSLHC_CMS_tracker}
@@ -209,31 +213,31 @@ on the plot represents a detector module}
 
 
 Beyond the pixel detector the tracking system is made up of a silicon
-strip detector consisting of over 9 million multiple different subsystems. The first part of the
-silicon strip tracker consists of \ac{TIB} and \ac{TID}, providing 4 layers of
+strip detector consisting of multiple different subsystems. The first part of the
+silicon strip tracker consists of the \ac{TIB} and \ac{TID}, providing 4 layers of
 silicon strip detectors in the barrel plus 3 disks at both ends. These two systems
 extend out towards a radius of 55 cm. The barrel layers and disks each consist
-of silicon strips which are 10 cm long, $80-141\mu m$ wide and $320 \mu m$ thick. The \ac{TIB} and \ac{TID}
+of silicon strips which are 10 cm long, $80-141~\mu$m wide and $320~\mu$m thick. The \ac{TIB} and \ac{TID}
 provide 4 measurements of the $r-\phi$ position  with a resolution of 23-35 $\mu m$.
 The \ac{TIB} and \ac{TID} are surrounded by the \ac{TOB}, which consists of 6 layers of silicon strip sensors extending
-up to an outer radius of 116 cm and up to $z=\pm 118$ cm. The strips in the \ac{TOB} are 500 $\mu m$ thick, around 25 cm long and 122-183 $\mu m$ 
+up to an outer radius of 116 cm and up to $z=\pm 118$ cm. The strips in the \ac{TOB} are 500~$\mu$m thick, around 25 cm long and 122-183 $\mu$m 
 wide and this subdetector provides 6 measurements of $r$ and $\phi$, with a resolution
-of 35-53 $\mu m$. Beyond the z-range covered by the \ac{TOB}, coverage is provided by the \ac{TEC},
-consisting of 9 disks of strips.In the \ac{TEC}, the thickness ranges from 320-500 $\mu m$ and the the strip width ranges from $97-184 \mu m$.
-In this way this part of the system provides up to 9 $\phi$ measurements.
+of 35-53 $\mu$m. Beyond the z-range covered by the \ac{TOB}, coverage is provided by the \ac{TEC},
+consisting of 9 disks of strips. In the \ac{TEC}, the strip thickness ranges from 320-500 $\mu$m and the the strip width ranges from $97-184 \mu m$.
+This part of the system provides up to 9 $\phi$ measurements.
 
 Some of the strip modules in the detector carry a second strip detector module mounted back-to-back with a stereo angle %FIXME WTF?
-of 100 mrad, in order to provide measurements of the $z-$ coordinate in the barrel. This is achieved with a resolution of 230-530 $\mu m$.
+of 100 mrad, in order to provide measurements of the $z-$ coordinate in the barrel. This is achieved with a resolution of 230-530 $\mu$m.
 
-The pixel tracker will be upgraded during the extended year-end technical stop in early 2017. %or just replaced?
+The pixel tracker will be upgraded during the extended year-end technical stop in early 2017 \cite{cms-pixel-upgrade}. %or just replaced?
 
 
 \subsection{\acl{ECAL}}
 \label{sec:CMSLHC_CMS_ecal}
 The \ac{ECAL} \cite{cms-jinst} is a hermetic homogeneous calorimeter
 made of nearly 76000 lead tungstate (PbWO$_4$) crystals. It has very
-good energy resolution, is highly granular and fast-responding, which
-are all needed to be able to detect $H\rightarrow \gamma\gamma$ decays.
+good energy resolution, is highly granular and fast-responding, all qualities 
+which are needed to be able to detect $H\rightarrow \gamma\gamma$ decays.
 
 Despite being further away from the interaction
 point than the tracker, the materials in other parts of the detector
@@ -270,9 +274,9 @@ covers the pseudorapidity range up to $|\eta|<1.479$, with
 crystals of $0.0174 \times 0.0174$ in $\eta - \phi$. The \ac{EE}
 provides coverage beyond the range of the \ac{EB}, up to $|\eta|<3.0$
 Each endcap is divided into two halves. In front of the endcaps 
-the preshower detectors, covering $1.653<|\eta|<2.6$ is a sampling
-calorimeter whose main use is to indentify neutral pions in the endcaps. Additionally
-it helps electron identification and improves the resolution
+the preshower detectors, covering $1.653<|\eta|<2.6$ are sampling
+calorimeters whose main use is to indentify neutral pions in the endcaps. Additionally
+they help electron identification and improve the resolution
 of position determination. Each of the two preshower detectors consist
 of two layers of lead radiators to initiate the shower, with silicon sensors
 placed after each layer of radiators to measure the deposited energy. The 
@@ -288,10 +292,10 @@ different components \cite{cms-jinst}.}
 \end{figure}
 
 To preserve the energy resolution, the \ac{ECAL} crystal and
-photodetector temperatures need to be kept stable within $\pm 0.05^o$C
+photodetector temperatures need to be kept stable within $\pm 0.05^{\circ}$C
 as the number of scintillation photons emitted by the crystals,
 and the amplification of the photodetectors are temperature dependent.
-The nominal operating temperature, $18^o$C, is ensured by 
+The nominal operating temperature, $18^{\circ}$C, is ensured by 
 supplying the detector with water at this temperature.
 
 To record the light yield of the crystals, amplifying photodetectors
@@ -301,7 +305,7 @@ for this, with vacuum phototriodes used in the \ac{EE}.
 The energy resolution of the \ac{ECAL} can be parameterised as
 
 \begin{equation}\label{eqn:ecalres}
-\frac{\sigma}{E} = \frac{S}{\sqrt{E}}\bigoplus\frac{N}{E}\bigoplus C,
+\frac{\sigma}{E} = \frac{S}{\sqrt{E}}\oplus\frac{N}{E}\oplus C,
 \end{equation}
 
 where $S$ is the stochastic term, $N$ the noise term and $C$ the constant term.
@@ -311,18 +315,19 @@ and additional particles in the event, and the constant term comes
 from calibration errors, and non-uniformity of longitudinal response.
 
 The values of $S$, $N$ and $C$ have been measured in an electron
-test-beam, without a magnetic field or material in front of the \ac{ECAL}. These
-amounted to $S = 0.028$ GeV$^{\frac{1}{2}}$, $N = 0.12$ GeV, $C= 0.003$.
+test-beam, without a magnetic field or material in front of the \ac{ECAL}, as 
+$S = 0.028$ GeV$^{\frac{1}{2}}$, $N = 0.12$ GeV and $C= 0.003$.
 %S = 2.83 %pm 0.03%, C = 0.26% pm 0.04%
 
 
 
 \subsection{\acl{HCAL}}
 \label{sec:CMSLHC_CMS_hcal}
-The \ac{ECAL} is surrounded by the \ac{HCAL}, important for the
+The \ac{ECAL} is surrounded by the \ac{HCAL}, which is important for the
 measurement of the energies of strongly interacting particles. As
 the \ac{ECAL} extends out to a radius of 1.77 m and the magnet coil
-starting at a radius of 2.95 m the barrel region of the \ac{HCAL} consists
+starts at a radius of 2.95 m, space for the \ac{HCAL} inside the magnet
+coil is limited. Therefore the barrel region of the \ac{HCAL} consists
 of the \ac{HB}, which sits inside the magnet coil, and the \ac{HO}, sitting outside it, 
 to complement the \ac{HB}. The \ac{HB} and \ac{HO}  provide coverage up to $|\eta|<1.3$, 
 beyond which they are complemented by the \ac{HE} and the \ac{HF}. The \ac{HE} provides
@@ -346,13 +351,13 @@ of 16.42 cm and the fact that it is non-magnetic. The tiles of scintillator
 are $0.087 \times 0.087$ in $\eta-\phi$ for $|\eta|<1.6$ and $0.17\times0.17$ in $\eta-\phi$
 beyond this range. 
 The light from each tile is collected with a wavelength-shifting fibre, 
-which is eventually read out using a hybrid photodiode. In the barrel, the \ac{HCAL}
+which is read out using a hybrid photodiode. In the barrel, the \ac{HCAL}
 has a thickness of between 5.82 and 10.6 interaction lenghts, which is not 
 sufficient to identify for example late-starting showers. The \ac{HO}, sitting
 outside of the magnet and using the coil as an additional absorber, extends the 
 thickness to at least 11.8 interaction lenghts. 
-The active material again consists of plastic scintillator tiles which roughly
-map the granularity of the tiles in the \ac{HB}, read out by feeding the light
+Like in the \ac{HB} the active material consists of plastic scintillator tiles which roughly
+map the granularity of the tiles in the \ac{HB}, and are read out by feeding the light
 to a hybrid photodiode via wavelength shifting fibres.
 %WTF: wavelength-shifting fibres
 
@@ -373,15 +378,16 @@ was measured in a test beam \cite{cms-hcalecal}
 and can be parameterised as 
 
 \begin{equation}\label{eqn:hcal_res}
-\frac{\sigma}{E} = \frac{S}{\sqrt{E}} \bigoplus C,
+\frac{\sigma}{E} = \frac{S}{\sqrt{E}} \oplus C,
 \end{equation}
 
 where $S$ is the stochastic term, found to be 94.3\% %pm 1.2
 and $C$ is the constant term, measured to be 8.4\% %pm 1.0
-HCAL RESOLUTION!
-%UPGRADE
-During LS1, the \ac{HO} and \ac{HF} pmts were replaced 
 
+%UPGRADE
+During \ac{LS1}, the photomultiplier tubes of the \ac{HF} were upgraded. The photomultiplier- and
+read-out systems of other parts of the \ac{HCAL} will be upgraded in stages over the
+next few years \cite{cms-hcal-upgrade}.
 
 
 \subsection{Muon system}
@@ -394,18 +400,17 @@ Since the discovery of the Higgs boson the ZZ channel has continued to be an imp
 final state for Higgs measurements, at the same time many \ac{BSM} searches also make use of 
 signatures with muons in the final state.
 All of this means that good muon identification efficiency and precise muon momentum resolution
-are very important. The \ac{CMS} muon system is made up out of three different subsystems which
+are very important. The \ac{CMS} muon system \cite{cms-jinst} is made up out of three different subsystems which
 are all necessary to ensure the identification requirements can be met. It is located
 outside of the magnet coil, interspersed in the iron return yoke of the solenoid.
 In the barrel of the detector the \ac{DT} chambers provide coverage for $|\eta|<1.2$, with
-the \ac{CSC} covering the $0.9<|\eta|<2.4$ region. The \ac{RPCs}, covering the same
+the \ac{CSCs} covering the $0.9<|\eta|<2.4$ region. The \ac{RPCs}, covering the same
 regions as both \ac{DT} and \ac{CSCs}, is used as a dedicated triggering system.
 
 A cross-section of one quadrant of the detector, indicating
 the positions of the \ac{DT},\ac{CSCs} and \ac{RPCs}, is shown in figure \ref{fig:CMS_MuonSystem}.
 The top of the fourth muon endcap station as shown in this figure was added during \ac{LS1}, providing
 additional layers of \ac{CSCs} and \ac{RPCs}.
-\ac{LS1}.
 \begin{figure}[h!]
 \begin{center}
 \includegraphics[width=0.8\textwidth]{./Detector/Plots/MuonSystemUpgrade.png}
@@ -417,9 +422,9 @@ part existed.}
 \end{center}
 \end{figure}
 
-The \ac{DT} consists of layers of drift cells with a cross-section of $4.2 \times 1.3$ cm and
-2.4 m long. The cells are filled with a mixture of %85\% 
-Argon and carbon di-oxide gas.
+The \ac{DT} consists of layers of drift cells which have a cross-section of $4.2 \times 1.3$ cm$^2$ and
+are 2.4 m long. The cells are filled with a mixture of %85\% 
+argon and carbon di-oxide gas.
 Muons passing through the chamber ionise the gas, freeing electrons
 which drift towards the anode wire running along the centre of the tube-shaped cell. 
 This gives rise to an electric signal. There are 4 \ac{DT} stations in each wedge of 
@@ -429,7 +434,7 @@ There are also layers oriented orthogonal to the beam line, which give a measure
 of the z-coordinate. Measurements of the spatial resolution were made
 during proton--proton running of the \ac{LHC} in 2010.
 The spatial resolution of the \ac{DT} is 80-120 $\mu$m per chamber for
-measurements in the $\phi$ direction, with the resolution of the $z$ measurement
+measurements in the $\phi$ direction, while the resolution of the $z$ measurement
 is 130-400 $\mu$m\cite{cms-muon-7tev}.
 %Drift lines distorted by magnetic field parallel to the wires
 
@@ -440,8 +445,8 @@ Each of the CSC modules is a wedge-shaped
 multi-wire proportional chamber %WTF
 with 6 gaseous chambers bounded by cathode planes, with
 sensitive strips placed on these plates in the
-radial direction, to measure the coordinate in the  $r-\phi$ plane
-of the muons. Anode wires in between the cathode planes
+radial direction, to measure the muon coordinate in the  $r-\phi$ plane
+Anode wires in between the cathode planes
 run along the $\phi$ direction and provide a measurement of
 $\eta$. The resolution of the $r-\phi$ measurement is 40-120 $\mu$m \cite{cms-muon-7tev}.
 
@@ -449,7 +454,7 @@ In addition to the \ac{DT} and \ac{CSCs}, the \ac{RPCs} provide coverage
 for $|\eta|<1.6$. These are made up of parallel plates, forming the anode and cathode,
 with a gas gap in between. Ionisation of the gas due to the passing
 muons is read out using aluminium strips running parallel to the 
-beam axis. The position resolution of the \ac{RPCs} is much poorer than
+beam axis. The position resolution of the \ac{RPCs} is poorer than
 that of the \ac{DT} and \ac{CSCs}, but their time response is very fast. As
 a result of this the \ac{RPCs} can be used as an independent muon trigger
 which can correctly identify the beam crossing from which the muon
@@ -458,8 +463,8 @@ originated.
 To obtain precise muon momentum resolution, information from 
 the tracker hits has to be combined with measurements in the
 muon stations. The momentum resolution of the muon system
-alone is 9\% for muons with \pT up to 200 GeV, and varies with $\eta$ 
-between 15-40\% for muons with \pT of 1 TeV.
+alone is 9\% for muons with \pT~up to 200 GeV, and varies with $\eta$ 
+between 15-40\% for muons with \pT~of 1 TeV \cite{cms-jinst}.
 
 
 %Because of the uncertainty in the eventual background rates and in the ability of the muon system to measure the correct beam-crossing time when the LHC reaches full luminosity, a com- plementary, dedicated trigger system consisting of resistive plate chambers (RPC) was added in both the barrel and endcap regions. The RPCs provide a fast, independent, and highly-segmented trigger with a sharp pT threshold over a large portion of the rapidity range (|η| < 1.6) of the muon system. The RPCs are double-gap chambers, operated in avalanche mode to ensure good operation at high rates. They produce a fast response, with good time resolution but coarser position reso- lution than the DTs or CSCs. They also help to resolve ambiguities in attempting to make tracks from multiple hits in a chamber.
@@ -471,7 +476,7 @@ of 40 MHz. This rate is too high for the \ac{DAQ} system to read out every event
 addition this high collision rate produces such a large number of events that it would
 not be feasible to write every single event, with sizes of around 1 MB, to tape. A trigger
 system is therefore used to select events of interest for study, which reduces the rate
-at which events are written to disk to  $\mathcal{O}(1 \text{ kHz})$.
+at which events are stored to  $\mathcal{O}(1 \text{ kHz})$.
 
 The trigger system consists of two stages: the \ac{L1} trigger, which only makes use of
 front-end electronics 
@@ -479,7 +484,7 @@ and reduces the event rate from 40 MHz to around 100 kHz, and the
 \ac{HLT}, which runs on a computer farm with around 13000 CPU cores \cite{cms-trigger}.
 During \ac{LS1} and the year-end technical stop at the end of 2015 the \ac{L1} trigger was
 replaced by a completely upgraded system \cite{cms-trigger-tdr}, which provides amongst others 
-improved object isolation, hadronic tau identification, muon \pT resolution and
+improved object isolation, hadronic tau identification, muon \pT~resolution and
 jet finding with respect to the system used during Run 1.
 An overview of the data flow in the \ac{L1} trigger is given in figure \ref{fig:CMS_Trigger}.
 
@@ -501,14 +506,14 @@ different columns of the detector, to be processed on one node in the second lay
 trigger. In this step basic object identification is performed based on the energy
 deposits, so that a sorted list of the best candidates can be passed to the global trigger.
 Hits in the muon chambers are read out and passed to the track finder layer 
-of the muon trigger, which combines information from the \ac{CSC}, \ac{DT}
-and \ac{RPC} systems in regions of $\eta-\phi$.
+of the muon trigger, which combines information from the CSC, \ac{DT}
+and RPC systems in regions of $\eta-\phi$.
 In further layers of the muon trigger the information from different
 regions is combined, until finally the global muon trigger
 can return a sorted list of the best muon candidates to the global trigger.
 The global trigger combines the information from the calorimeter and muon triggers
 to make a decision on whether the event should be sent to the \ac{HLT} or whether
-it should be discarded. A decision has to be made within 3.2 $\mu s$, the maximum time during
+it should be discarded. A decision has to be made within 3.2 $\mu$s, the maximum time during
 which data can be stored in the front-end electronics before being lost.
 
 %The muon trigger is a tracking trigger that measures the momentum of muons using the magnetic field in the steel yoke of the CMS solenoid; thus its resolution degrades with increasing momentum. This can be improved by maximizing the number of chamber hits along a muon trajectory and by improving the precision and number of position and angular measurements participating in the track fit applied in the trigger logic. Moreover, isolation criteria can be applied using the energy deposits in the calorimeter in order to further reduce the rate of muons from heavy flavor jets.
@@ -525,14 +530,14 @@ an additional 0.6 kHz parked to be reconstructed and analysed when
 more processing power is available\cite{CMS-PAS-HIG-16-037}. %ie at the end of run 2
 
 While the trigger system reduces the rate substantially, several
-petabytes of data are produced by \ac{CMS} each year, in addition to 
-even larger amounts of simulated datasets. To 
-make these large amounts of data easily available for analysis, 
+petabytes of collision data are stored by \ac{CMS} each year, on top
+of large sets of simulated events. 
+To make these large amounts of data easily available for analysis, 
 \ac{CMS} and the other \ac{LHC} experiments make use of the \ac{WLCG} \cite{lhc-wlcg}. 
 The \ac{WLCG} pools the resources of computer centres at universities and research
 laboratories around the world, based on a system of tiers. The Tier 0, at \ac{CERN} and
-thw Wigner Research Centre for Physics in Budapest, performs the full reconstruction
-and saves the data to tape. Datasets are copied to at least one Tier 1 centre, from
+the Wigner Research Centre for Physics in Budapest, performs the full reconstruction
+and saves a copy of the data to tape. Datasets are copied to at least one Tier 1 centre, from
 where data can be distributed to Tier 2 centres. The Tier 2 centres are located
 at over 150 universities and research institutes around the world, providing 
 resources for analysis of the datasets to all researchers associated with the experiment.
