--- a/frontmatter.tex
+++ b/frontmatter.tex
@@ -24,8 +24,8 @@
 %% Preface
 %\begin{preface}
 %\end{preface}
-\listoffigures
-\listoftables
+%\listoffigures
+%\listoftables
 %% ToC
 \tableofcontents
 
